<resources>
    <string name="app_name">iDaily</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="version">v1.0</string>

    <string name="action_channel">频道</string>

    <!--menu-->
    <string name="news">新闻</string>
    <string name="zhihu">知乎</string>
    <string name="photo">图片</string>
    <string name="video">视频</string>
    <string name="tools">设置</string>
    <string name="no_photo_mode">无图模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="about">关于</string>

    <!-- 新闻 -->
    <string name="load_error">加载失败</string>
    <string name="db_error">数据库出错了</string>
    <string name="internet_error">网络异常,请检查网络设置</string>
    <string name="news_from">%1$s %2$s</string>
    <string name="loading">加载中…</string>
    <string name="no_more">没有更多了</string>
    <string name="photo_collections">图集：%1$s</string>
    <string name="photo_detail_title">%1$d/%2$d　%3$s</string>
    <string name="photo_news">图片新闻</string>
    <string name="retry_after">请稍后重试</string>
    <string name="share">分享</string>
    <string name="share_contents">来自「多彩资讯」的分享：%1$s %2$s</string>
    <string name="web_view">WebView</string>
    <string name="browser">用浏览器打开</string>
    <string name="retry_refresh_news">点我一下 重新加载</string>

    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>

    <!-- 新闻频道 -->
    <string name="channel_explain">点击可增删/长按并拖拽可排序</string>
    <string name="my_channel">我的频道</string>
    <string name="more_channel">更多频道</string>
    <string name="channel_manage">频道管理</string>

    <!-- 图片 -->
    <string name="girl">妹纸</string>
    <string name="error_try_again">错误，请重试</string>
    <string name="save">保存</string>
    <string name="set_wallpaper">设为壁纸</string>
    <string name="picture_already_save_to">图片已保存至%1$s</string>
    <string name="set_wallpaper_success">设置壁纸成功</string>
    <string name="about_msg">
        这是一款Material Design风格的新闻阅读App，采用MVP模式，基于Dagger2+RxJava+Retrofit2进行开发。
        \n新闻模块数据来源于网易，图片模块数据来源于干货集中营。
    </string>

    <string name="action_day_night_yes">Night Mode</string>

    <!--bottom sheet list-->
    <string name="action_add_to_bookmarks">添加到收藏</string>
    <string name="action_delete_from_bookmarks">取消收藏</string>
    <string name="action_copy_link">复制链接</string>
    <string name="action_open_in_browser">在浏览器中打开</string>
    <string name="action_copy_text">复制内容文本</string>
    <string name="action_share_as_text">作为文本分享</string>

    <string name="copied_to_clipboard">复制成功</string>
    <string name="copied_to_clipboard_failed">复制失败</string>

    <string name="splash_slogan">Go through the every bit of life</string>
    <string name="splash_version">V 1.0.0</string>
    <string name="splash_copyright">Copyright &#169; 2017 iDaily All Rights Reserved\nPowered by Eric Jin</string>
</resources>
