<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    style="?attr/bottomSheetStyle"
    android:id="@+id/reading_bottom_sheet"
    android:background="@color/viewBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:id="@+id/layout_bookmark"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_star_black_24dp"
            android:tint="@color/textColorPrimary"
            android:id="@+id/imageView"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/action_add_to_bookmarks"
            android:gravity="center_vertical"
            android:id="@+id/textView"
            android:textColor="@color/textColorPrimary"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:id="@+id/layout_open_in_browser"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_open_in_browser_black_24dp"
            android:tint="@color/textColorPrimary"
            android:contentDescription=""
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/action_open_in_browser"
            android:gravity="center_vertical"
            android:textColor="@color/textColorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:id="@+id/layout_copy_link"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_insert_link_black_24dp"
            android:tint="@color/textColorPrimary"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/action_copy_link"
            android:gravity="center_vertical"
            android:textColor="@color/textColorPrimary"/>

    </LinearLayout>



    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:id="@+id/layout_copy_text"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_content_copy_black_24dp"
            android:tint="@color/textColorPrimary"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/action_copy_text"
            android:gravity="center_vertical"
            android:textColor="@color/textColorPrimary"/>

    </LinearLayout>-->

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:id="@+id/layout_share_text">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_share_white_24dp"
            android:tint="@color/textColorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/action_share_as_text"
            android:gravity="center_vertical"
            android:textColor="@color/textColorPrimary"/>

    </LinearLayout>-->

</LinearLayout>